- Refactored JourneyDirectionHandler.java and renamed to JourneyDirectionValidator - Further tests for JourneyDirectionValidator - Some test fixes - Moved test classes to proper package - Added messages for newly introduced warnings - Replaced Arrays.asList() nad Collections.singletonList with List.of() - Old ProjectTimeEntry extracted to ProjectEntry interfaces which is implemented by ProjectTimeEntry and JourneyTimeEntry, now time and journey calculators only get elements of proper types - Got rid of ZepTestUtil